--- a/2nmc-demo-gcc/make_mc12101/Makefile1
+++ b/2nmc-demo-gcc/make_mc12101/Makefile1
@@ -58,8 +58,8 @@ endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
-SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 $(ROOT)/src_proc1/common $(ROOT)/src_proc $(ROOT)/src_proc1/nm ../src_target1
-LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
+SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 ../src_target1
+LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L"$(ROOT)/lib"
 ifdef DEBUG
 TMP_DIR          = Debug
 else
@@ -70,7 +70,7 @@ CC 				 = nmc-g++
 CC_FLAGS		 = -O2 -fno-builtin-printf -std=c++11
 AS               = nmc-gcc 				 
 AS_FLAGS    	 = -c -mmas -x assembler -Wa,-split_sir -mnmc4-fixed
-LIBS             = -lnmpp-nmc4 -lhal-mc12101
+LIBS             = -lnmopengl-nmc4 -lnmpp-nmc4 -lhal-mc12101
 MAP		         = $(PROJECT).map
 CFG				 = ldscript-nmc1.ld
 LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
@@ -116,8 +116,12 @@ all: $(TARGET) dump
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) $(CFG) nmc4vars_win.mk Makefile $(ALL_H)
+$(TARGET): $(TMP_DIR) $(OBJECTS) $(CFG) nmc4vars_win.mk Makefile $(ALL_H) nmopengl-nmc4
 	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
+	@echo nm1 done
+
+nmopengl-nmc4:
+	$(MAKE) -C $(ROOT)/make/nmopengl-nmc4
 
 nmc4vars_win.mk:
 	copy "$(NMC_GCC_TOOLPATH)\nmc4-ide\include\nmc4vars_win.mk" nmc4vars_win.mk profile
