--- a/app/templates/project_make/make_mc12101/Makefile0
+++ b/app/templates/project_make/make_mc12101/Makefile0
@@ -50,16 +50,16 @@ ROOT = ../..
 include $(ROOT)/global.mk
 include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
-PROFILE			 = ../src_target1/proflist_generated1.asm
-PROJECT          = main1
+PROFILE			 = ../src_target0/proflist_generated0.asm
+PROJECT          = main0
 ifdef DEBUG
-PROJECT 		 = main1d
+PROJECT 		 = main0d
 endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
-SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 ../src_target1
-LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L"$(ROOT)/lib"
+SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc0 ../src_target0
+LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L"$(ROOT)/lib"
 ifdef DEBUG
 TMP_DIR          = Debug
 else
@@ -67,15 +67,15 @@ TMP_DIR          = Release
 endif
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
-CC_FLAGS		 = -O2 -fno-builtin-printf -std=c++11
+CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11 -mnmc4-float
 AS               = nmc-gcc 				 
-AS_FLAGS    	 = -c -mmas -x assembler -Wa,-split_sir -mnmc4-fixed
-LIBS             = -lnmopengl-nmc4 -lnmpp-nmc4 -lhal-mc12101
+AS_FLAGS    	 = -c -mmas -x assembler -mnmc4-float
+LIBS             = -lnmopengl-nmc4f -lnmpp-nmc4f -lhal-mc12101 
 MAP		         = $(PROJECT).map
-CFG				 = ldscript-nmc1.ld
-LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
+CFG				 = ldscript-nmc0.ld
+LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
 
-ifeq ($(DEBUG),y)
+ifdef DEBUG
 	CC_FLAGS	+= -DDEBUG
 else
 	CC_FLAGS	+= -DNDEBUG
@@ -88,7 +88,7 @@ endif
 ALL_CPP =$(wildcard $(addsuffix /*.cpp, $(SRC_DIRS)))
 ALL_ASM =$(wildcard $(addsuffix /*.asm, $(SRC_DIRS)))
 ALL_C   =$(wildcard $(addsuffix /*.c, $(SRC_DIRS)))
-ALL_H   =$(wildcard $(addsuffix /*.h, $(HEADER_DIRS)))
+ALL_H   =$(wildcard $(addsuffix /*.h, $(INC_DIRS)))
 
 VPATH   = $(SRC_DIRS)
 
@@ -97,7 +97,6 @@ OBJECTS_CPP = $(notdir $(patsubst %.cpp,%.o,$(ALL_CPP)))
 OBJECTS_ASM = $(notdir $(patsubst %.asm,%.o,$(ALL_ASM)))
 OBJECTS_C   = $(notdir $(patsubst %.c,%.o,$(ALL_C)))
 OBJECTS     = $(addprefix $(TMP_DIR)/, $(OBJECTS_C) $(OBJECTS_CPP)  $(OBJECTS_ASM))
-$(info "===" $(OBJECTS_C))
 
 #======================== BUILD RULES ====================================
 .PHONY:all  clean skip
@@ -107,26 +106,21 @@ default: $(TARGET)
 
 #$(TMP_DIR) $(OUT_DIR)  $(TARGET)
 
-all: $(TARGET) dump
-	
-#	$(MAKE) -j4 DEBUG=y
-#	$(MAKE) -j4
-
 	
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) $(CFG) nmc4vars_win.mk Makefile $(ALL_H) nmopengl-nmc4
-	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
-	@echo nm1 done
-
-nmopengl-nmc4:
-	$(MAKE) -C $(ROOT)/make/nmopengl-nmc4
+$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H) $(CFG) nmc4vars_win.mk Makefile libnmopengl_nmc4_float.a
+	$(CC) $(CC_FLAGS) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
+	@echo nm0 done
 
 nmc4vars_win.mk:
-	copy "$(NMC_GCC_TOOLPATH)\nmc4-ide\include\nmc4vars_win.mk" nmc4vars_win.mk profile
+	copy "$(NMC_GCC_TOOLPATH)\nmc4-ide\include\nmc4vars_win.mk" nmc4vars_win.mk
 
-$(OUT_DIR): 
+libnmopengl_nmc4_float.a:
+	$(MAKE) -C $(ROOT)/make ARCH=nmc4_float -j4 lib
+
+$(OUT_DIR):
 	-mkdir "$(@)"
 	
 $(TMP_DIR)/%.o: %.asm  $(ALL_H) $(CFG)
@@ -135,14 +129,13 @@ $(TMP_DIR)/%.o: %.asm  $(ALL_H) $(CFG)
 $(TMP_DIR)/%.o: %.cpp  $(ALL_H) $(CFG)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 
-$(TMP_DIR)/%.o: %.c $(ALL_H) $(CFG)
+$(TMP_DIR)/%.o: %.c  $(ALL_H) $(CFG)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
+	
 	
 $(PROFILE):
 	python $(HAL)/script/profiler.py > $(PROFILE)
 profile: $(TARGET)
 	python $(HAL)/script/profiler.py $(MAP) > $(PROFILE)
-	
-
 
 include $(ROOT)/clean.mk
