--- a/2nmc-demo-gcc/make_mc12101/.vscode/tasks.json
+++ b/2nmc-demo-gcc/make_mc12101/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "Build all",
             "type": "shell",
             "group": "build",
-            "command": "scons",
+            //"command": "scons",
             "dependsOn": [ "Build host", "Build nm0", "Build nm1"],
         },
         {
@@ -124,6 +124,11 @@
             },
         },
         {
+            "label": "run nm",
+            "type": "shell",
+            "dependsOn": [ "run nm0", "run nm1" ]
+        },
+        {
             "label": "run nm0",
             "type": "shell",
             "command": "mc12101run",
@@ -134,7 +139,8 @@
             ],
             "args": [
                 "${workspaceFolder}/main0d.abs",
-                "-a0"
+                "-a0",
+                "-p"
             ],
             "problemMatcher": {
                 "background": {
@@ -158,7 +164,8 @@
             "command": "mc12101run",
             "args": [
                 "${workspaceFolder}/main1d.abs",
-                "-a1"
+                "-a1",
+                "-p"
             ],
             "group": "test",
             "isBackground": true,
